--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ server:
 #    enabled: false
 spring:
   thymeleaf:
+    prefix: classpath:/templates/
     mode: HTML
     cache: false
   jackson:
